# infersent-replication

./: .gitignore  README.md  data.py  demo.ipynb  environment.yml  error_analysis.md  eval.py  gen_pip_conda_files.sh  infer.py  pyproject.toml  requirements.txt  train.py  utils.py
images/: custom_images.pptx  ~$custom_images.pptx
models/: encoder.py  infersent.py  nli.py
