[tool.poetry]
name = "infersent-replication"
version = "0.1.0"
description = "Partial replication of Conneau et al. (2017)"
authors = ["Giulio Starace <giulio.starace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^1.6.0"
spacy = "^3.2.4"
datasets = "^2.0.0"
torch = "^1.11.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
