[tool.poetry]
name = "infersent-replication"
version = "0.1.0"
description = "Partial replication of Conneau et al. (2017)"
authors = ["Giulio Starace <giulio.starace@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytorch-lightning = "^1.6.0"
datasets = "^2.0.0"
torch = "^1.11.0"
numpy = "^1.22.3"
notebook = "^6.4.10"
tqdm = "^4.64.0"
ipywidgets = "^7.7.0"
nltk = "^3.7"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
jupyterlab = "^3.3.3"
jupyterlab-code-formatter = "^1.4.10"
nbdime = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
